# zarr_wildlife_recording_py

./: .gitattributes  .gitignore  README.md  TODO.md  export_full_requirements.sh  mkdocs.yaml  pyproject.toml  requirements.txt  setup-dev-tooling.sh  zarrwlr_project_concept.md  zarrwlr_project_status.md
.devcontainer/: devcontainer.json
.github/workflows/: mkdocs.yml
birdnet_crawler-predeveloping/:  ...   .gitattributes  .gitignore  .gitignore_suggestions  README.md  add_gitignore_suggestions.sh  concept.md  requirements.sh  requirements.txt  rm_with_gitignore.sh
birdnet_crawler-predeveloping/.devcontainer/: devcontainer.json
birdnet_crawler-predeveloping/src/: setup.cfg
birdnet_crawler-predeveloping/src/birdnettoolbox/cores/: hdf5.py  original_sound_files.py  project_analyser.py  recording_detections.py
birdnet_crawler-predeveloping/src/birdnettoolbox/karlincam/: soundfile_importer.py  soundfile_importer_old.py
birdnet_crawler-predeveloping/test_zone/: Untitled.ipynb  birdnetlib-test1.py
birdnet_crawler-predeveloping/test_zone/PyOgg/: simpleaudio-test.py
docs/: index.md
sandbox/: beamforming.py  cpu_diagnosis.py  requirements.txt  test.py
src/zarrwlr/: Umbauplan.md  __init__.py  aac_access.py  aac_index_backend.py  aac_project_concept.md  aac_project_state.md  aac_project_state_update.md  aaccess.py  aimport.py  aimport.py.bak  aimport_old_functions.py  aimport_todo.md  aimport_umbau.md  audio_coding.py  audioimport.py  byteblobaudio_workflow.py  config.py  exceptions.py  file_blob.py  filemeta.py  files.py  flac_access.py  flac_index_backend.py  flacbyteblob.py  flacbyteblob.py.bak  import_utils.py  letzte Testergebnisse.txt  logging_setup.py  logsetup.py  modified_aimport.py  module_config.py  module_configuration.py  oggfileblob.py  opus_access.py  opus_access.py.bak  opus_index_backend.py  opus_index_backend_backup.py  opus_konzept.md  opus_konzept_updates.md  opus_parser.py  (+13 more)
tests/: debug_opus_performance.py  ffmpeg_debug_test.py  opus_index_test.py  opus_index_test_production.py  opus_io_debug.py  project_context.md  quick_test_packet_extraction.py  requirements.txt  run_all_tests.py  simple_aac_index_backend.py  test_aac_3col_priorities.py  test_aac_basic.py  test_aac_implementation.py  test_aac_import_pipeline.py  test_aac_performance_optimized.py  test_aac_simple.py  test_aimport.py  test_aimport.py.old.py  test_audio_import.py  test_audio_import_standalone.py  test_audio_import_standalone.py.bak  test_chunk_optimization.py  test_comprehensive_aac.py  test_debug_version.py  test_extraction_direct.py  test_extraction_performance.py  test_flac_index.py  test_flac_integrity.py  test_import_utils.py  test_oggfileblob.py  test_opus_basic.py  test_opus_end_to_end.py  test_opus_step_1_1.py  test_packet_based_implementation.py  test_phase1_sync_search_Test_Implementierungsvarianten.py.bak  test_phase1_sync_search_phase1_ready.py  test_phase2_flac-index-reimplementation.py  test_phase6_extraction.py  test_simple_correctness.py  test_utils.py
tests/aeltere_files/: test_audio_coding.py  test_direct_codec.py  test_flac_production_ready.py
tests/testdata/: a_text_text_file.txt  karlinsound_Y2023_dayOfYear127_m05_d07_H20_M30_S00.ogx
(+30 files in other folders)
