[metadata]
name = birdnettoolbox
author = F. Herbrand
author_email = herbrand@gmx.de
description = Toolset and usable examples regarding birdnetlib and Birdnet
classifiers =
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.10

[options.packages.find]
exclude =
	__pycache__
    *_old*

[options.extras_require]

[options.entry_points]
